[tool.poetry]
name = "trabalho_ia2"
version = "0.1.0"
description = ""
authors = ["saraselis <saras1@hotmail.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
pade = "^2.2.4"
icecream = "^2.1.1"
python-twitter = "^3.5"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
